# Conditional-EEG-Diffusion

./: .gitignore  LICENSE  README.md  callbacks.py  framework.py  inference.py  losses.py  metrics.py  pretrain_eegnet.py  pyproject.toml  run_metrics.py  sampling.py  sde.py  train.py
configs/: Lee2019_ERP_CFG.py
data_utils/: data_utils.py  dataset.py  plot_util.py
models/: EEGWave.py  utils.py
