[tool.poetry]
name = "thesis"
version = "0.1.0"
description = "Dependencies necessary to run EEG SDEs"
authors = ["Guido Klein"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
numpy = "^1.26.4"
torch = "^2.2.0"
lightning = "^2.2.0.post0"
wandb = "^0.16.3"
skorch = "^0.15.0"
dataclass-cli = "^0.1.1"
huggingface-hub = "^0.20.3"
torchdata = "^0.7.1"
torchmetrics = "^1.3.1"
dacite = "^1.8.1"
jupyterlab = "^4.1.1"
pytest = "^7.4.2"
six = "^1.16.0"
psutil = "^5.9.8"
idna = "^3.6"
certifi = "^2024.2.2"
scipy = "1.12.0"
torchvision = "^0.17.0"
umap-learn = {extras = ["plot"], version = "^0.5.5"}
pymatreader = "^0.0.32"
statannot = "^0.2.3"
h5io = "^0.2.2"
torch-fidelity = "^0.3.0"
pot = "^0.9.3"
braindecode = "^0.8.1"
moabb = "^1.0.0"
mne = "^1.6.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
